@@ -1,3 +1,8 @@
+Mon Feb 10 09:51:23 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>
+
+	* src/findreplace.c (find_next_cb, find_prev_cb, replace_next_cb): 
+	made "String was not found\n" translatable (#103610).
+
 2003-01-29  Jaka Mocnik  <jaka@gnu.org>
 
 	* src/gnome-print-font-*: code rip from gedit: dialog and picker
